syntax = 'proto3';

package tech.figure.aggregate.proto;

import "google/protobuf/timestamp.proto";

message CoinTransfer {
  uint64 block_height = 1;
  google.protobuf.Timestamp block_timestamp = 2;
  string event_type = 3;
  string tx_hash = 4;
  string recipient = 5;
  string sender = 6;
  string amount = 7;
  string denom = 8;
}
