syntax = 'proto3';

package tech.figure.aggregate.proto;

import "google/protobuf/timestamp.proto";

message MarkerSupply {
  uint64 block_height = 1;
  google.protobuf.Timestamp block_timestamp = 2;
  string event_type = 3;
  string tx_hash = 4;
  string coins = 5;
  string denom = 6;
  string amount = 7;
  string administrator = 8;
  string to_address = 9;
  string from_address = 10;
  string metadata_base = 11;
  string metadata_description = 12;
  string metadata_display = 13;
  string metadata_denom_units = 14;
  string metadata_name = 15;
  string metadata_symbol = 16;
}
